@@ -8,6 +8,7 @@ import javax.security.auth.x500.X500Principal;
 import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public final class TaNames {
 
@@ -30,10 +31,6 @@ public final class TaNames {
         return objectPublicationUri(publicationUri, crlFileName(taCertificateName));
     }
 
-    public static URI clrPublicationUriForParentCertificate(X509ResourceCertificate currentTaCertificate) {
-        return crlPublicationUri(currentTaCertificate.getRepositoryUri(), currentTaCertificate.getIssuer());
-    }
-
     public static String manifestFileName(X500Principal taCertificateName) {
         return encodePath(stripCNEqualsFromPrincipal(taCertificateName) + ".mft");
     }
@@ -47,11 +44,7 @@ public final class TaNames {
     }
 
     private static String encodePath(String path) {
-        try {
-            return URLEncoder.encode(path, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new IllegalArgumentException("Can't encode path:" + path, e);
-        }
+        return URLEncoder.encode(path, StandardCharsets.UTF_8);
     }
 
     private static String stripCNEqualsFromPrincipal(X500Principal certificateName) {
